RESOLVED FIXED277531
Notify WKNavigationDelegate when GPU process crashed too frequently
https://bugs.webkit.org/show_bug.cgi?id=277531
Summary Notify WKNavigationDelegate when GPU process crashed too frequently
Ryosuke Niwa
Reported 2024-08-01 23:13:46 PDT
Let WKNavigationDelegate know when GPU process crashed too frequently and resulted in the termination of WebContent process.
Attachments
Ryosuke Niwa
Comment 1 2024-08-01 23:46:15 PDT
EWS
Comment 2 2024-08-02 10:40:59 PDT
Committed 281765@main (63c54304c7ea): <https://commits.webkit.org/281765@main> Reviewed commits have been landed. Closing PR #31630 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-08-02 10:41:18 PDT
Ryosuke Niwa
Comment 4 2024-08-02 17:05:28 PDT
EWS
Comment 5 2024-08-02 17:24:03 PDT
Committed 281781@main (61c2f5fb2337): <https://commits.webkit.org/281781@main> Reviewed commits have been landed. Closing PR #31674 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.