Notify WKNavigationDelegate when GPU process crashed too frequently https://bugs.webkit.org/show_bug.cgi?id=277531

Unreviewed build fix.

* Source/WebKit/UIProcess/Model/ModelProcessProxy.cpp:
(WebKit::ModelProcessProxy::modelProcessExited):

Canonical link: https://commits.webkit.org/281781@main